--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "angular-favicon": "^1.0.9",
+    "animate.css": "^3.7.2",
+    "bootstrap": "^5.3.2",
+    "ngx-mask": "^16.3.9",
+    "pocketbase": "^0.19.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
