--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@angular/compiler": "^17.0.1",
     "@angular/core": "^17.0.1",
     "@angular/forms": "^17.0.1",
+    "@angular/google-maps": "^17.3.3",
     "@angular/platform-browser": "^17.0.1",
     "@angular/platform-browser-dynamic": "^17.0.1",
     "@angular/router": "^17.0.1",
+    "@googlemaps/js-api-loader": "^1.16.6",
     "@popperjs/core": "^2.11.6",
     "angular-favicon": "^1.0.9",
     "animate.css": "^3.7.2",
