--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@angular/compiler-cli": "^17.0.1",
     "@angular/localize": "^17.0.1",
     "@types/jasmine": "~4.3.0",
+    "@types/node": "^20.12.10",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
