--- a/package.json
+++ b/package.json
@@ -10,36 +10,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.0.1",
-    "@angular/common": "^17.0.1",
-    "@angular/compiler": "^17.0.1",
-    "@angular/core": "^17.0.1",
-    "@angular/forms": "^17.0.1",
-    "@angular/google-maps": "^17.3.3",
-    "@angular/platform-browser": "^17.0.1",
-    "@angular/platform-browser-dynamic": "^17.0.1",
-    "@angular/router": "^17.0.1",
-    "@googlemaps/js-api-loader": "^1.16.6",
+    "@angular/animations": "^17.3.12",
+    "@angular/common": "^17.3.12",
+    "@angular/compiler": "^17.3.12",
+    "@angular/core": "^17.3.12",
+    "@angular/forms": "^17.3.12",
+    "@angular/google-maps": "^17.3.10",
+    "@angular/platform-browser": "^17.3.12",
+    "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/router": "^17.3.12",
+    "@googlemaps/js-api-loader": "^1.16.8",
     "@popperjs/core": "^2.11.6",
     "angular-favicon": "^1.0.9",
     "animate.css": "^3.7.2",
-    "bootstrap": "^5.3.2",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
-    "ngx-mask": "^16.3.9",
+    "ngx-mask": "^16.4.2",
     "pocketbase": "^0.19.0",
     "rxjs": "~7.8.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.14.2"
+    "tslib": "^2.7.0",
+    "update": "^0.4.2",
+    "zone.js": "^0.14.10"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.0.0",
-    "@angular/cli": "~17.0.0",
-    "@angular/compiler-cli": "^17.0.1",
-    "@angular/localize": "^17.0.1",
+    "@angular-devkit/build-angular": "^17.3.10",
+    "@angular/cli": "^17.3.10",
+    "@angular/compiler-cli": "^17.3.12",
+    "@angular/localize": "^17.3.12",
     "@types/jasmine": "~4.3.0",
-    "@types/node": "^20.12.10",
-    "jasmine-core": "~4.6.0",
-    "karma": "~6.4.0",
+    "@types/node": "^20.16.11",
+    "jasmine-core": "^4.6.1",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
