--- a/package.json
+++ b/package.json
@@ -6,7 +6,11 @@
     "start": "node -r dotenv/config mynode.js && ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "dev:ssr": "ng run val-imoveis:serve-ssr",
+    "serve:ssr": "node dist/val-imoveis/server/main.js",
+    "build:ssr": "ng build && ng run val-imoveis:server",
+    "prerender": "ng run val-imoveis:prerender"
   },
   "private": true,
   "dependencies": {
@@ -18,13 +22,17 @@
     "@angular/google-maps": "^17.3.10",
     "@angular/platform-browser": "^17.3.12",
     "@angular/platform-browser-dynamic": "^17.3.12",
+    "@angular/platform-server": "^17.3.12",
     "@angular/router": "^17.3.12",
+    "@angular/ssr": "^17.3.10",
     "@googlemaps/js-api-loader": "^1.16.8",
+    "@nguniversal/express-engine": "^7.0.2",
     "@popperjs/core": "^2.11.6",
     "angular-favicon": "^1.0.9",
     "animate.css": "^3.7.2",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "ngx-mask": "^16.4.2",
     "pocketbase": "^0.19.0",
     "rxjs": "~7.8.0",
@@ -37,8 +45,10 @@
     "@angular/cli": "^17.3.10",
     "@angular/compiler-cli": "^17.3.12",
     "@angular/localize": "^17.3.12",
+    "@types/express": "^4.17.17",
     "@types/jasmine": "~4.3.0",
-    "@types/node": "^20.16.11",
+    "@types/node": "^18.18.0",
+    "browser-sync": "^3.0.0",
     "jasmine-core": "^4.6.1",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "~3.2.0",
