--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^17.3.12",
+    "@angular/cdk": "^17.3.0",
     "@angular/common": "^17.3.12",
     "@angular/compiler": "^17.3.12",
     "@angular/core": "^17.3.12",
@@ -25,19 +26,24 @@
     "@angular/platform-server": "^17.3.12",
     "@angular/router": "^17.3.12",
     "@angular/ssr": "^17.3.10",
+    "@coreui/angular": "~5.1.11",
+    "@coreui/coreui": "^5.1.2",
+    "@coreui/icons-angular": "~5.1.11",
     "@googlemaps/js-api-loader": "^1.16.8",
     "@nguniversal/express-engine": "^7.0.2",
-    "@popperjs/core": "^2.11.6",
+    "@popperjs/core": "~2.11.8",
     "angular-favicon": "^1.0.9",
     "animate.css": "^3.7.2",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "ng-multiselect-dropdown": "^1.0.0",
     "ngx-mask": "^16.4.2",
     "pocketbase": "^0.19.0",
     "rxjs": "~7.8.0",
+    "set-value": "^3.0.1",
     "tslib": "^2.7.0",
-    "update": "^0.4.2",
+    "update": "^0.7.4",
     "zone.js": "^0.14.10"
   },
   "devDependencies": {
